fix audioclip card alignment

--- a/backend/seeds/static/seeds/styles.css
+++ b/backend/seeds/static/seeds/styles.css
@@ -260,6 +260,8 @@ footer * {
 .content-list > li {
     height: auto;
     width: auto;
+    display: flex;
+    align-items: center;
 }
 
 .card {
